fix: align center

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@ main
 {
   text-align: center;
 }
+
+.todo-row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
